Add ul for ingredients and image of Torta

--- a/recipes/torta.html
+++ b/recipes/torta.html
@@ -7,23 +7,39 @@
 </head>
 <body>
     <h1>How to make a Torta Milanesa</h1>
+    <img src="/images/torta-milanesa.jpeg" alt="Torta Milanesa Image">
         <h2>Ingredients</h2>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Vegetable oil for frying</li>
+                <li>4 boneless skinless chicken breasts pounded to 1/4-inch thickness</li>
+                <li>Kosher or sea salt to taste
+                </li>
+                <li>Freshly ground black pepper to taste
+                </li>
+                <li>1 cup all-purpose flour
+                </li>
+                <li>3 eggs
+                </li>
+                <li>A splash of milk
+                </li>
+                <li>2 cups crushed butter crackers
+                </li>
+                <li>8 to 10 dried chiltepín chiles crushed (or substitute 3 to 4 chiles de árbol)
+                </li>
+                <li>1 cup mayonnaise
+                </li>
+                <li>2 cups grated Oaxaca cheese
+                </li>
+                <li>1/2 cup crumbled Cotija cheese
+                </li>
+                <li>4 bolillo or telera rolls split in half with insides scooped out
+                </li>
+                <li>2 cups baby arugula
+                </li>
+                <li>1 batch Matador Guacamole
+                </li>
+                <li>1/4 cup soy and lime mixture from the Matador Guacamole
+                </li>
             </ul>
                 <p>How to Prepare</p>
 </body>
