Add How to Prepare Recipe ol and Image for Recipe

--- a/recipes/torta.html
+++ b/recipes/torta.html
@@ -41,6 +41,21 @@
                 <li>1/4 cup soy and lime mixture from the Matador Guacamole
                 </li>
             </ul>
-                <p>How to Prepare</p>
+                <h2>How to Prepare</h2>
+                <ol>
+                    <li>Preheat Oven to 450°F</li>
+                    
+                    <li>In a large skillet over medium heat, add 1/2-inch of vegetable oil and heat until very hot but not smoking, for at least 4 to 5 minutes.</li>
+
+                    <li>Meanwhile, season the chicken breasts with salt and pepper. Make a breading station using three shallow dishes: place the flour in one, whisk the eggs with a splash of milk in another, and mix the cracker crumbs with salt, pepper and the crushed chiles in the third one. One by one, dredge the chicken breasts in the flour, then pass through the egg mixture, and then coat well with the cracker crumbs mixture, pressing it onto the chicken as you do. Place them on a baking sheet and continue with the remaining chicken.</li>
+
+                    <li>Fry the chicken breasts in the heated oil one or two at a time, making sure the pan is not over crowded, for about 3 minutes per side until golden brown and cooked through. Transfer to a paper towel lined plate or rack and repeat with the remaining chicken breasts.</li>
+
+                    <li>In another bowl, mix the mayonnaise with Oaxaca and Cotija cheeses.</li>
+
+                    <li>To build the torta, place the split bread rolls on a baking sheet. Spread the cheese and mayonnaise mixture on the split sides of the rolls. Bake until the cheese is bubbling and melted, about 4 to 5 minutes.</li>
+
+                    <li>Toss the arugula with 1/4 cup of the soy and lime mixture from the Matador Guacamole. Top the bottom half rolls, with the cheese already melted on them, with the chicken, Matador Guacamole, and the dressed arugula. Cover with the top half of the rolls.</li>
+                </ol>
 </body>
 </html>
