--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/torta.html">Torta Milanesa Recipe</a>
+    <ul>
+        <li><a href="./recipes/torta.html">Torta Milanesa Recipe</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/tuna-and-corn.html">Tuna & Corn "Jail Food"</a></li>
+    </ul>
 </body>
 </html>
