--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="Title">Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/torta.html">Torta Milanesa Recipe</a></li>
-        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/tuna-and-corn.html">Tuna & Corn "Jail Food"</a></li>
+        <li class="recipe"><a href="./recipes/torta.html">Torta Milanesa Recipe</a></li>
+        <li class="recipe"><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li class="recipe"><a href="./recipes/tuna-and-corn.html">Tuna & Corn "Jail Food"</a></li>
     </ul>
 </body>
 </html>
