add dir stylesheets and add style to torta recipe

--- a/recipes/torta.html
+++ b/recipes/torta.html
@@ -4,43 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torta Milanesa Recipe</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <h1>How to make a Torta Milanesa</h1>
-    <img src="/images/torta-milanesa.jpeg" alt="Torta Milanesa Image">
-        <h2>Description</h2>
-            <p>Eat this delicious mexican sandwhich with tolera rolls a variety of vegtables and breaded chicken!</p>    
-                <h2>Ingredients</h2>
+    <h1 id="Title">How to make a Torta Milanesa</h1>
+    <img id="image" src="/images/torta-milanesa.jpeg" alt="Torta Milanesa Image">
+        <h2 id="description-title">Description</h2>
+            <p id="description">Eat this delicious mexican sandwhich with tolera rolls a variety of vegtables and breaded chicken!</p>    
+                <h2 id="ingredients-title">Ingredients</h2>
                     <ul>
-                        <li>Vegetable oil for frying</li>
-                        <li>4 boneless skinless chicken breasts pounded to 1/4-inch thickness</li>
-                        <li>Kosher or sea salt to taste
+                        <li class="ingredient">Vegetable oil for frying</li>
+                        <li class="ingredient">4 boneless skinless chicken breasts pounded to 1/4-inch thickness</li>
+                        <li class="ingredient">Kosher or sea salt to taste
                         </li>
-                        <li>Freshly ground black pepper to taste
+                        <li class="ingredient">Freshly ground black pepper to taste
                         </li>
-                        <li>1 cup all-purpose flour
+                        <li class="ingredient">1 cup all-purpose flour
                         </li>
-                        <li>3 eggs
+                        <li class="ingredient">3 eggs
                         </li>
-                        <li>A splash of milk
+                        <li class="ingredient">A splash of milk
                         </li>
-                        <li>2 cups crushed butter crackers
+                        <li class="ingredient">2 cups crushed butter crackers
                         </li>
-                        <li>8 to 10 dried chiltepín chiles crushed (or substitute 3 to 4 chiles de árbol)
+                        <li class="ingredient">8 to 10 dried chiltepín chiles crushed (or substitute 3 to 4 chiles de árbol)
                         </li>
-                        <li>1 cup mayonnaise
+                        <li class="ingredient">1 cup mayonnaise
                         </li>
-                        <li>2 cups grated Oaxaca cheese
+                        <li class="ingredient">2 cups grated Oaxaca cheese
                         </li>
-                        <li>1/2 cup crumbled Cotija cheese
+                        <li class="ingredient">1/2 cup crumbled Cotija cheese
                         </li>
-                        <li>4 bolillo or telera rolls split in half with insides scooped out
+                        <li class="ingredient">4 bolillo or telera rolls split in half with insides scooped out
                         </li>
-                        <li>2 cups baby arugula
+                        <li class="ingredient">2 cups baby arugula
                         </li>
-                        <li>1 batch Matador Guacamole
+                        <li class="ingredient">1 batch Matador Guacamole
                         </li>
-                        <li>1/4 cup soy and lime mixture from the Matador Guacamole
+                        <li class="ingredient">1/4 cup soy and lime mixture from the Matador Guacamole
                         </li>
                     </ul>
                         <h2>How to Prepare</h2>
